added providers to user user data

--- a/appointment/pubspec.yaml
+++ b/appointment/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_fonts: ^4.0.3
   fluttertoast: ^8.2.1
   sidebarx: ^0.15.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
