--- a/appointment/pubspec.yaml
+++ b/appointment/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   fluttertoast: ^8.2.1
   sidebarx: ^0.15.0
   provider: ^6.0.5
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
