--- a/appointment/pubspec.yaml
+++ b/appointment/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   sidebarx: ^0.15.0
   provider: ^6.0.5
   uuid: ^3.0.7
+  qr_flutter: ^4.0.0
+  pdf: ^3.6.4
+  path_provider: ^2.0.14
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +73,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - assets/logo.png
+  
+  
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
