--- a/appointment/pubspec.yaml
+++ b/appointment/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   qr_flutter: ^4.0.0
   pdf: ^3.6.4
   path_provider: ^2.0.14
+  screenshot: ^1.3.0
+  firebase_storage: ^11.0.16
+  gallery_saver: ^2.3.2
+  dio: ^5.0.3
 
 dev_dependencies:
   flutter_test:
