--- a/appointment/pubspec.yaml
+++ b/appointment/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   firebase_storage: ^11.0.16
   gallery_saver: ^2.3.2
   dio: ^5.0.3
+  image_picker: ^0.8.3
 
 dev_dependencies:
   flutter_test:
